style: :lipstick: Estilos header
Se agrega los estilos correspondientes al header, con su imagen de fondo y el texto

--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Weather App Redesign</title>
     <link rel="shortcut icon" href="./storage/img/logo.png" type="image/png">
-    <link rel="stylesheet" href="./css/style.css">
-    <script type="module" defer src="js/main.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="js/script.js"></script>
 </head>
 <body>
+    <header class="header">
+        <section class="nameLocation"><p class="nameCity">Hola, hola</p></section>
+        <section class="weather">
+            <div class="number">
+                <h2>3</h2>
+                <div class="text">
+                    <span>feels like 2</span>
+                </div>
+            </div>
+            <div class="icon">
+                <img src="" alt="">
+                <p>Cloudy</p>
+            </div>
+        </section>
+        <section class="date">
+            <div class="day">
+                <p>Junary 18, 16:14</p>
+            </div>
+            <div class="dayWeather">
+                <p>Day 3</p>
+                <p>Nigth -1</p>
+            </div>
+        </section>
+    </header>
+    <main class="container"></main>
+    <footer class="footer"></footer>
 </body>
 </html>
